auth-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-container
  labels:
    app: auth-server-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server-container
  template:
    metadata:
      labels:
        app: auth-server-container
    spec:
      containers:
        - name: auth-server-container
          image: ogunfz09/authserver:latest
          ports:
            - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  selector:
    app: auth-server-container
  ports:
    - protocol: TCP
      port: 9898
      targetPort: 9898
