chat-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-container
  labels:
    app: chat-server-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-server-container
  template:
    metadata:
      labels:
        app: chat-server-container
    spec:
      containers:
        - name: chat-server-container
          image: ogunfz09/chat-server:latest
          ports:
            - containerPort: 7979
---
apiVersion: v1
kind: Service
metadata:
  name: chat-server
  labels:
    app: chat-server
spec:
  selector:
    app: chat-server-container
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 7979
      targetPort: 7979
      nodePort: 32750
