cloud-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-config-container
  labels:
    app: cloud-config-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-config-container
  template:
    metadata:
      labels:
        app: cloud-config-container
    spec:
      containers:
        - name: cloud-config-container
          image: ogunfz09/cloudconfigserver:latest
          ports:
            - containerPort: 9595
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-config-server
spec:
  selector:
    app: cloud-config-container
  ports:
    - protocol: TCP
      port: 9595
      targetPort: 9595
