cloud-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-container
  labels:
    app: cloud-gateway-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway-container
  template:
    metadata:
      labels:
        app: cloud-gateway-container
    spec:
      containers:
        - name: cloud-gateway-container
          image: ogunfz09/cloudgateway:latest
          ports:
            - containerPort: 9191
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway
spec:
  selector:
    app: cloud-gateway-container
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191
      nodePort: 31000
