customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-container
  labels:
    app: customer-service-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service-container
  template:
    metadata:
      labels:
        app: customer-service-container
    spec:
      containers:
        - name: customer-service-container
          image: ogunfz09/customerservice:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  selector:
    app: customer-service-container
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
