discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server-container
  labels:
    app: discovery-server-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server-container
  template:
    metadata:
      labels:
        app: discovery-server-container
    spec:
      containers:
        - name: discovery-server-container
          image: ogunfz09/discoveryserver:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server-container
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
