email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-container
  labels:
    app: email-service-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service-container
  template:
    metadata:
      labels:
        app: email-service-container
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: email-service-container
          image: ogunfz09/email-service:latest
          ports:
            - containerPort: 9798
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service-container
  ports:
    - protocol: TCP
      port: 9798
      targetPort: 9798
