mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-container
  template:
    metadata:
      labels:
        app: mongodb-container
    spec:
      containers:
        - name: mongodb-container
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim
      volumes:
        - name: mongo-claim
          persistentVolumeClaim:
            claimName: mongo-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb-container
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
