order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-container
  labels:
    app: order-service-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-container
  template:
    metadata:
      labels:
        app: order-service-container
    spec:
      containers:
        - name: order-service-container
          image: ogunfz09/orderservice:latest
          ports:
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    app: order-service-container
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
