rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
  labels:
    app: rabbitmq
    type: Service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 4369
      targetPort: 4369
      name: discovery
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: stomp
  selector:
    app: rabbitmq
