redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-container
  labels:
    app: redis-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-container
  template:
    metadata:
      labels:
        app: redis-container
    spec:
      containers:
        - name: redis-container
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-container
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
