storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-container
  template:
    metadata:
      labels:
        app: storage-container
    spec:
      containers:
        - name: storage-container
          image: ogunfz09/storage-service:latest
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: pic-storage
              mountPath: /home/cnb/pics/
      volumes:
        - name: pic-storage
          persistentVolumeClaim:
            claimName: storage-claim

---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage-container
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696

  clusterIP: None
