zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-container
  labels:
    app: zipkin-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-container
  template:
    metadata:
      labels:
        app: zipkin-container
    spec:
      containers:
        - name: zipkin-container
          image: openzipkin/zipkin:latest
          ports:
            - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
spec:
  selector:
    app: zipkin-container
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
      nodePort: 30001
