email-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mailjet
spec:
  hosts:
    - smtp.mailtrap.io
  #  addresses:
  #  - 104.199.96.85/32
  ports:
    - name: tls
      number: 587
      protocol: tcp
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailjet
spec:
  hosts:
    - smtp.mailtrap.io
  tcp:
    - match:
        - port: 587
      route:
        - destination:
            host: smtp.mailtrap.io
            port:
              number: 587
